prusti-tests/tests/verify/ui/ghost-constraints/invalid-trait-refinement-2.stderr
error: [Prusti: verification error] the method's postcondition may not be a valid strengthening of the trait's postcondition.
  --> $DIR/invalid-trait-refinement-2.rs:16:1
   |
16 | #[extern_spec]
   | ^^^^^^^^^^^^^^
...
30 |     #[ensures(self.x >= 15)]
   |               ^^^^^^^^^^^^
   |
   = help: The implemented method's postcondition should imply the trait's postcondition.
   = note: this error originates in the attribute macro `extern_spec` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

